Email Reset Password

--- a/FutureStar/FutureStar_App/templates/base-other-page.html
+++ b/FutureStar/FutureStar_App/templates/base-other-page.html
@@ -13,9 +13,9 @@
   <meta name="keywords"
     content="admin template, Cuba admin template, dashboard template, flat admin template, responsive admin template, web app">
   <meta name="author" content="pixelstrap">
-  <link rel="icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon">
-  <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon">
-  <title>Cuba - Premium Admin Template</title>
+  <link rel="icon" href="{{ fav_icon }}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ fav_icon }}" type="image/x-icon">
+  <title>Future Star</title>
   <!-- Google font-->
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,500i,700,700i&amp;display=swap"
     rel="stylesheet">
