--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -29,7 +29,7 @@
             <ul class="sidebar-links" id="simple-bar">
                <li class="back-btn">
                   <a href="#">
-                     <img class="img-fluid" {{ fav_icon }}" style="width: 35px; height: 35px;" alt="">
+                     <img class="img-fluid" src="{{fav_icon }}" style="width: 35px; height: 35px;" alt="">
                   </a>
                   <div class="mobile-back text-end">
                      <span>Back</span>
