logout session manage

--- a/FutureStar/FutureStar_App/templates/layouts/header.html
+++ b/FutureStar/FutureStar_App/templates/layouts/header.html
@@ -135,7 +135,7 @@
                     <div class="media-body">User<span></span>
                   {% endif %}
                 
-                    <p class="mb-0 font-roboto">Admin <i class="middle fa fa-angle-down"></i></p>
+                    <p class="mb-0 font-roboto">{{user.role.name}} <i class="middle fa fa-angle-down"></i></p>
                   </div>
                 </div>
                 <ul class="profile-dropdown onhover-show-div">
