titke of all pages

--- a/FutureStar/FutureStar_App/templates/Admin/Auth/reset_password.html
+++ b/FutureStar/FutureStar_App/templates/Admin/Auth/reset_password.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% load sass_tags %}
-
+{% block title %}Reset Password{% endblock %}
 {% block content %}
 
 <!-- tap on top starts-->
