--- a/FutureStar/FutureStar_App/templates/login.html
+++ b/FutureStar/FutureStar_App/templates/login.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load sass_tags %}
 {% load widget_tweaks %}
+{% block title %}Future Star{% endblock %}
+
 {% block content %}
 <script>
   function saveDetails() {
@@ -43,7 +45,7 @@
     <div class="col-12 p-0">    
       <div class="login-card">
         <div>
-          <div><a class="logo" href="#"><img class="img-fluid for-light" src="{{ header_logo }}" alt="loginpage"><img class="img-fluid for-dark" src="{{ header_logo }}" alt="loginpage"></a></div>
+          <div><a class="logo" href="{% url 'login' %}"><img class="img-fluid for-light" src="{{ header_logo }}" alt="loginpage"><img class="img-fluid for-dark" src="{{ header_logo }}" alt="loginpage"></a></div>
           <div class="login-main"> 
             <form class="theme-form" method='post' novalidate>
                 {% csrf_token %}
