Header Logo Resize

--- a/FutureStar/FutureStar_App/templates/Admin/Auth/reset_password.html
+++ b/FutureStar/FutureStar_App/templates/Admin/Auth/reset_password.html
@@ -17,8 +17,8 @@
             <div>
                 <div>
                     <a class="logo" href="{% url 'forgot_password' %}">
-                        <img class="img-fluid for-light" src="{{ header_logo }}" alt="loginpage">
-                        <img class="img-fluid for-dark" src="{{ header_logo }}" alt="loginpage">
+                        <img class="img-fluid for-light" style="width: 120px; height: 35px;" src="{{ header_logo }}" alt="loginpage">
+                        <img class="img-fluid for-dark" style="width: 120px; height: 35px;" src="{{ header_logo }}" alt="loginpage">
                     </a>
                 </div>
                 <div class="login-main"> 
