remove breadcum and all buttons in hearder

--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -64,7 +64,7 @@
                         <a href="{% url 'role_list' %}">User Roles</a>
                      </li>
                      <li>
-                        <a href="{% url 'category_list' %}">User Category</a>
+                        <a href="{% url 'category_list' %}">Category Type</a>
                      </li>
                   </ul>
                </li>
