--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -58,7 +58,7 @@
                   </a>
                   <ul class="sidebar-submenu">
                      <li>
-                        <a href="{% url 'user_list' %}">User List</a>
+                        <a href="{% url 'user_list' %}">Player List</a>
                      </li>
                      <li>
                         <a href="{% url 'role_list' %}">User Roles</a>
