--- a/FutureStar/FutureStar_App/templates/Admin/General_Settings/FieldCapacity.html
+++ b/FutureStar/FutureStar_App/templates/Admin/General_Settings/FieldCapacity.html
@@ -1,24 +1,21 @@
 {% extends 'base.html' %} {% load static %} {% load sass_tags %} {% block css %}
 <!-- Plugins css start-->
 <link rel="stylesheet" type="text/css" href="{% sass_src 'assets/scss/vendors/datatables.scss' %}">
-<!-- Plugins css Ends--> {% endblock %}
-{% block title %}Field Capacity{% endblock %} 
- {% block content %} 
- <div class="page-body">
+<!-- Plugins css Ends--> {% endblock %} {% block title %}Field Capacity{% endblock %} {% block content %} <div class="page-body">
    <div class="container-fluid">
-    <div class="page-title">
-        <div class="row">
-          <div class="col-6">
-            <h3>{{breadcrumb.child}}</h3>
-          </div>
-          <div class="col-6">
-            <ol class="breadcrumb">
-                <button class="btn btn-pill btn-outline-primary-2x ml-auto" data-bs-toggle="modal" data-bs-target="#addFieldCapacityModal">Add FieldCapacity</button>
-            </ol>
-          </div>
-        </div>
+      <div class="page-title">
+         <div class="row">
+            <div class="col-6">
+               <h3>{{breadcrumb.child}}</h3>
+            </div>
+            <div class="col-6">
+               <ol class="breadcrumb">
+                  <button class="btn btn-pill btn-outline-primary-2x ml-auto" data-bs-toggle="modal" data-bs-target="#addFieldCapacityModal">Add FieldCapacity</button>
+               </ol>
+            </div>
+         </div>
       </div>
-    <div class="row">
+      <div class="row">
          <!-- FieldCapacity List -->
          <div class="col-sm-12">
             <div class="card">
@@ -36,18 +33,25 @@
                               <td>{{ forloop.counter }}</td>
                               <td>{{ fieldcapacity.name }}</td>
                               <td>
-                                 <ul class="action">
-                                    <li class="edit">
-                                       <a href="#" data-bs-toggle="modal" data-bs-target="#editFieldCapacityModal" data-fieldcapacity-id="{{ fieldcapacity.id }}" data-fieldcapacity-name="{{ fieldcapacity.name }}">
-                                          <i class="icon-pencil-alt"></i>
-                                       </a>
-                                    </li>
-                                    <li class="delete">
-                                       <a href="#" data-bs-toggle="modal" data-bs-target="#deleteFieldCapacityModal" data-fieldcapacity-id="{{ fieldcapacity.id }}">
-                                          <i class="icon-trash"></i>
-                                       </a>
-                                    </li>
-                                 </ul>
+                                 <div class="action-menu-container" style="position: relative; display: inline-block;">
+                                    <a href="#" class="three-dots-menu" onclick="toggleMenu(this)">
+                                       <i data-feather="more-vertical"></i>
+                                       <!-- Three dots icon -->
+                                    </a>
+                                    <!-- Hidden card for actions -->
+                                    <div class="action-card" style="display: none; position: absolute; top: 100%; right: 0; background: #fff; border: 1px solid #ccc; border-radius: 4px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); z-index: 10; width: 150px;">
+                                       <ul style="list-style: none; padding: 0; margin: 0;">
+                                          <li style="padding: 8px 12px;">
+                                             <a style="font-size: large;" href="#" data-bs-toggle="modal" data-bs-target="#editFieldCapacityModal" data-fieldcapacity-id="{{ fieldcapacity.id }}" data-fieldcapacity-name="{{ fieldcapacity.name }}">
+                                                <i data-feather="edit"></i> Edit </a>
+                                          </li>
+                                          <li style="padding: 8px 12px; border-top: 1px solid #eee;">
+                                             <a style="font-size: large;" href="#" data-bs-toggle="modal" data-bs-target="#deleteFieldCapacityModal" data-fieldcapacity-id="{{ fieldcapacity.id }}">
+                                                <i data-feather="trash-2"></i> Delete </a>
+                                          </li>
+                                       </ul>
+                                    </div>
+                                 </div>
                               </td>
                            </tr> {% endfor %} </tbody>
                      </table>
@@ -61,70 +65,61 @@
 <!-- Add FieldCapacity Modal -->
 <div class="modal fade" id="addFieldCapacityModal" tabindex="-1" aria-labelledby="addFieldCapacityModalLabel" aria-hidden="true">
    <div class="modal-dialog">
-       <div class="modal-content">
-           <div class="modal-header">
-               <h5 class="modal-title" id="addFieldCapacityModalLabel">Add FieldCapacity (Players) </h5>
-               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-           </div>
-           <div class="modal-body">
-               <form method="post" action="{% url 'fieldcapacity_create' %}" id="addFieldCapacityForm">
-                   {% csrf_token %}
-                   <div class="mb-3">
-                       <label for="name" class="form-label">Approx Field Capacity (Players) </label>
-                       <input type="text" class="form-control" id="name" name="name" placeholder="Enter approx field capacity">
-                       <div id="addFieldCapacityError" class="text-danger mt-2"></div>
-                   </div>
-                   <button type="submit" class="btn btn-primary">Add Field Capacity (Players) </button>
-               </form>
-           </div>
-       </div>
+      <div class="modal-content">
+         <div class="modal-header">
+            <h5 class="modal-title" id="addFieldCapacityModalLabel">Add FieldCapacity (Players) </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+         </div>
+         <div class="modal-body">
+            <form method="post" action="{% url 'fieldcapacity_create' %}" id="addFieldCapacityForm"> {% csrf_token %} <div class="mb-3">
+                  <label for="name" class="form-label">Approx Field Capacity (Players) </label>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Enter approx field capacity">
+                  <div id="addFieldCapacityError" class="text-danger mt-2"></div>
+               </div>
+               <button type="submit" class="btn btn-primary">Add Field Capacity (Players) </button>
+            </form>
+         </div>
+      </div>
    </div>
 </div>
-
 <!-- Edit FieldCapacity Modal -->
 <div class="modal fade" id="editFieldCapacityModal" tabindex="-1" aria-labelledby="editFieldCapacityModalLabel" aria-hidden="true">
    <div class="modal-dialog">
-       <div class="modal-content">
-           <div class="modal-header">
-               <h5 class="modal-title" id="editFieldCapacityModalLabel">Edit FieldCapacity (Players)</h5>
-               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-           </div>
-           <div class="modal-body">
-               <form method="post" action="{% url 'fieldcapacity_update' pk=0 %}" id="editFieldCapacityForm">
-                   {% csrf_token %}
-                   <input type="hidden" id="editFieldCapacityId" name="id">
-                   <div class="mb-3">
-                       <label for="editName" class="form-label">Approx Field Capacity</label>
-                       <input type="text" class="form-control" id="editName" name="name" placeholder="Enter fieldcapacity name">
-                       <div id="editFieldCapacityError" class="text-danger mt-2"></div>
-                   </div>
-                   <button type="submit" class="btn btn-primary">Update Field Capacity (Players) </button>
-               </form>
-           </div>
-       </div>
+      <div class="modal-content">
+         <div class="modal-header">
+            <h5 class="modal-title" id="editFieldCapacityModalLabel">Edit FieldCapacity (Players)</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+         </div>
+         <div class="modal-body">
+            <form method="post" action="{% url 'fieldcapacity_update' pk=0 %}" id="editFieldCapacityForm"> {% csrf_token %} <input type="hidden" id="editFieldCapacityId" name="id">
+               <div class="mb-3">
+                  <label for="editName" class="form-label">Approx Field Capacity</label>
+                  <input type="text" class="form-control" id="editName" name="name" placeholder="Enter fieldcapacity name">
+                  <div id="editFieldCapacityError" class="text-danger mt-2"></div>
+               </div>
+               <button type="submit" class="btn btn-primary">Update Field Capacity (Players) </button>
+            </form>
+         </div>
+      </div>
    </div>
 </div>
-
 <!-- Delete FieldCapacity Modal -->
 <div class="modal fade" id="deleteFieldCapacityModal" tabindex="-1" aria-labelledby="deleteFieldCapacityModalLabel" aria-hidden="true">
    <div class="modal-dialog">
-       <div class="modal-content">
-           <div class="modal-header">
-               <h5 class="modal-title" id="deleteFieldCapacityModalLabel">Delete FieldCapacity</h5>
-               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-           </div>
-           <div class="modal-body">
-               <form method="post" action="{% url 'fieldcapacity_delete' pk=0 %}" id="deleteFieldCapacityForm">
-                   {% csrf_token %}
-                   <input type="hidden" id="deleteFieldCapacityId" name="id">
-                   <p>Are you sure you want to delete this fieldcapacity?</p>
-                   <button type="submit" class="btn btn-danger">Delete FieldCapacity</button>
-               </form>
-           </div>
-       </div>
+      <div class="modal-content">
+         <div class="modal-header">
+            <h5 class="modal-title" id="deleteFieldCapacityModalLabel">Delete FieldCapacity</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+         </div>
+         <div class="modal-body">
+            <form method="post" action="{% url 'fieldcapacity_delete' pk=0 %}" id="deleteFieldCapacityForm"> {% csrf_token %} <input type="hidden" id="deleteFieldCapacityId" name="id">
+               <p>Are you sure you want to delete this fieldcapacity?</p>
+               <button type="submit" class="btn btn-danger">Delete FieldCapacity</button>
+            </form>
+         </div>
+      </div>
    </div>
-</div>
-{% endblock %} {% block scriptcontent %}
+</div> {% endblock %} {% block scriptcontent %}
 <!-- Plugins JS start-->
 <script src="{% static 'assets/js/datatable/datatables/jquery.dataTables.min.js'%}"></script>
 <script src="{% static 'assets/js/datatable/datatables/datatable.custom.js'%}"></script>
@@ -132,76 +127,92 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
    document.addEventListener('DOMContentLoaded', function() {
-       // Edit FieldCapacity Modal
-       var editFieldCapacityModal = document.getElementById('editFieldCapacityModal');
-       if (editFieldCapacityModal) {
-           editFieldCapacityModal.addEventListener('show.bs.modal', function(event) {
-               var button = event.relatedTarget; // Button that triggered the modal
-               var fieldcapacityId = button.getAttribute('data-fieldcapacity-id');
-               var fieldcapacityName = button.getAttribute('data-fieldcapacity-name');
-               var form = document.getElementById('editFieldCapacityForm');
-               form.action = "{% url 'fieldcapacity_update' pk='0' %}".replace('0', fieldcapacityId);
-               form.querySelector('#editFieldCapacityId').value = fieldcapacityId;
-               form.querySelector('#editName').value = fieldcapacityName;
-               // Clear previous error message
-               document.getElementById('editFieldCapacityError').textContent = '';
-           });
-       }
-
-       // Delete FieldCapacity Modal
-       var deleteFieldCapacityModal = document.getElementById('deleteFieldCapacityModal');
-       if (deleteFieldCapacityModal) {
-           deleteFieldCapacityModal.addEventListener('show.bs.modal', function(event) {
-               var button = event.relatedTarget; // Button that triggered the modal
-               var fieldcapacityId = button.getAttribute('data-fieldcapacity-id');
-               var form = document.getElementById('deleteFieldCapacityForm');
-               form.action = "{% url 'fieldcapacity_delete' pk='0' %}".replace('0', fieldcapacityId);
-               form.querySelector('#deleteFieldCapacityId').value = fieldcapacityId;
-           });
-       }
-
-       // Add FieldCapacity Form Validation
-       var addFieldCapacityForm = document.getElementById('addFieldCapacityForm');
-       if (addFieldCapacityForm) {
-           addFieldCapacityForm.addEventListener('submit', function(event) {
-               var nameInput = document.getElementById('name');
-               var errorContainer = document.getElementById('addFieldCapacityError');
-               var nameValue = nameInput.value.trim();
-
-               // Clear previous error messages
-               errorContainer.textContent = '';
-
-               if (nameValue === '') {
-                   event.preventDefault();
-                   errorContainer.textContent = 'Field capacity cannot be empty.';
-                   return false;
-               }
-
-               // Additional validation for uniqueness can be handled server-side
-           });
-       }
-
-       // Edit FieldCapacity Form Validation
-       var editFieldCapacityForm = document.getElementById('editFieldCapacityForm');
-       if (editFieldCapacityForm) {
-           editFieldCapacityForm.addEventListener('submit', function(event) {
-               var nameInput = document.getElementById('editName');
-               var errorContainer = document.getElementById('editFieldCapacityError');
-               var nameValue = nameInput.value.trim();
-
-               // Clear previous error messages
-               errorContainer.textContent = '';
-
-               if (nameValue === '') {
-                   event.preventDefault();
-                   errorContainer.textContent = 'Field capacity cannot be empty.';
-                   return false;
-               }
-
-               // Additional validation for uniqueness can be handled server-side
-           });
-       }
+      // Edit FieldCapacity Modal
+      var editFieldCapacityModal = document.getElementById('editFieldCapacityModal');
+      if (editFieldCapacityModal) {
+         editFieldCapacityModal.addEventListener('show.bs.modal', function(event) {
+            var button = event.relatedTarget; // Button that triggered the modal
+            var fieldcapacityId = button.getAttribute('data-fieldcapacity-id');
+            var fieldcapacityName = button.getAttribute('data-fieldcapacity-name');
+            var form = document.getElementById('editFieldCapacityForm');
+            form.action = "{% url 'fieldcapacity_update' pk='0' %}".replace('0', fieldcapacityId);
+            form.querySelector('#editFieldCapacityId').value = fieldcapacityId;
+            form.querySelector('#editName').value = fieldcapacityName;
+            // Clear previous error message
+            document.getElementById('editFieldCapacityError').textContent = '';
+         });
+      }
+      // Delete FieldCapacity Modal
+      var deleteFieldCapacityModal = document.getElementById('deleteFieldCapacityModal');
+      if (deleteFieldCapacityModal) {
+         deleteFieldCapacityModal.addEventListener('show.bs.modal', function(event) {
+            var button = event.relatedTarget; // Button that triggered the modal
+            var fieldcapacityId = button.getAttribute('data-fieldcapacity-id');
+            var form = document.getElementById('deleteFieldCapacityForm');
+            form.action = "{% url 'fieldcapacity_delete' pk='0' %}".replace('0', fieldcapacityId);
+            form.querySelector('#deleteFieldCapacityId').value = fieldcapacityId;
+         });
+      }
+      // Add FieldCapacity Form Validation
+      var addFieldCapacityForm = document.getElementById('addFieldCapacityForm');
+      if (addFieldCapacityForm) {
+         addFieldCapacityForm.addEventListener('submit', function(event) {
+            var nameInput = document.getElementById('name');
+            var errorContainer = document.getElementById('addFieldCapacityError');
+            var nameValue = nameInput.value.trim();
+            // Clear previous error messages
+            errorContainer.textContent = '';
+            if (nameValue === '') {
+               event.preventDefault();
+               errorContainer.textContent = 'Field capacity cannot be empty.';
+               return false;
+            }
+            // Additional validation for uniqueness can be handled server-side
+         });
+      }
+      // Edit FieldCapacity Form Validation
+      var editFieldCapacityForm = document.getElementById('editFieldCapacityForm');
+      if (editFieldCapacityForm) {
+         editFieldCapacityForm.addEventListener('submit', function(event) {
+            var nameInput = document.getElementById('editName');
+            var errorContainer = document.getElementById('editFieldCapacityError');
+            var nameValue = nameInput.value.trim();
+            // Clear previous error messages
+            errorContainer.textContent = '';
+            if (nameValue === '') {
+               event.preventDefault();
+               errorContainer.textContent = 'Field capacity cannot be empty.';
+               return false;
+            }
+            // Additional validation for uniqueness can be handled server-side
+         });
+      }
    });
 </script>
-
-{% endblock %}
+<script>
+   document.addEventListener('DOMContentLoaded', function() {
+      // Toggle the visibility of the action card
+      document.querySelectorAll('.three-dots-menu').forEach(function(menu) {
+         menu.addEventListener('click', function(event) {
+            event.preventDefault();
+            var actionCard = menu.nextElementSibling;
+            actionCard.style.display = (actionCard.style.display === 'none' || actionCard.style.display === '') ? 'block' : 'none';
+            // Close other open action cards
+            document.querySelectorAll('.action-card').forEach(function(card) {
+               if (card !== actionCard) {
+                  card.style.display = 'none';
+               }
+            });
+         });
+      });
+      // Hide action card if clicking outside
+      document.addEventListener('click', function(event) {
+         var isClickInside = event.target.closest('.action-menu-container');
+         if (!isClickInside) {
+            document.querySelectorAll('.action-card').forEach(function(card) {
+               card.style.display = 'none';
+            });
+         }
+      });
+   });
+</script> {% endblock %}
