--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -114,6 +114,18 @@
                      </li>
                   </ul>
                </li>
+
+               <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'cmspages_urls' %}">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-sample-page"></use>
+                     </svg>
+                     <span class="lan">CMS Pages</span>
+                  </a>
+               </li>
+
+               
+               
                <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
                      <i class="icon-settings"> </i> &nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
